# mcp-mysql-connector

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: pypi-publish.yml
src/mcp_mysql/: __init__.py  __main__.py  mcp.py
src/mcp_mysql/adapters/: mysql.py
src/mcp_mysql/core/: models.py
src/mcp_mysql/services/: connection.py
src/mcp_mysql/tools/: mysql_tools.py
src/mcp_mysql_connector/: __init__.py  __main__.py  mcp.py
src/mcp_mysql_connector/adapters/: mysql.py
src/mcp_mysql_connector/core/: models.py
src/mcp_mysql_connector/services/: connection.py
src/mcp_mysql_connector/tools/: mysql_tools.py
tests/: conftest.py  test_adapters.py  test_connection.py  test_models.py  test_tools.py
